exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 50,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 40,
        "fontWeight": "bold",
        "marginBottom": 70,
      }
    }>
    Sample App
  </Text>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="username"
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="password"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 20,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 35,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 15,
            },
            Object {
              "fontSize": 30,
            },
          ]
        }>
        LOGIN
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "transparent",
        "borderWidth": 1,
        "height": 35,
      }
    } />
</View>
`;

exports[`test renders when login button is loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 50,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 40,
        "fontWeight": "bold",
        "marginBottom": 70,
      }
    }>
    Sample App
  </Text>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="username"
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="password"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 20,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 35,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
        ]
      }>
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        } />
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "transparent",
        "borderWidth": 1,
        "height": 35,
      }
    } />
</View>
`;

exports[`test renders when login errors for bad credentials 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 50,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 40,
        "fontWeight": "bold",
        "marginBottom": 70,
      }
    }>
    Sample App
  </Text>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="username"
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 1,
        },
        Object {
          "marginLeft": 10,
          "marginRight": 10,
        },
        undefined,
        Object {
          "flexDirection": "row",
        },
      ]
    }>
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      onChange={[Function]}
      placeholder="password"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
          Object {
            "height": 40,
            "width": 400,
          },
          undefined,
          Object {
            "flex": -1,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent" />
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 20,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderWidth": 1,
            "height": 35,
            "justifyContent": "center",
            "marginTop": 50,
            "width": 100,
          },
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 15,
            },
            Object {
              "fontSize": 30,
            },
          ]
        }>
        LOGIN
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "transparent",
        "borderWidth": 1,
        "height": 35,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "red",
          "fontSize": 20,
        }
      }>
      BAD CREDENTIALS
    </Text>
  </View>
</View>
`;
